cmake_minimum_required(VERSION 3.22)
project(AOC2017)

set(CMAKE_CXX_STANDARD 14)

add_executable(AOC2017
        sources/day1.cpp sources/day2.cpp sources/main.cpp headers/day1.h headers/day2.h sources/day3.cpp headers/day3.h sources/day4.cpp headers/day4.h sources/day5.cpp headers/day5.h sources/day6.cpp headers/day6.h sources/day8.cpp headers/day8.h)
